# cmake-examples

./: README.adoc  test.sh
00-cmake-env/A-print-cmake-env/: CMakeLists.txt  run_test.sh
00-cmake-env/A-print-cmake-vars/: CMakeLists.txt  run_test.sh
01-basic/H-third-party-library/: CMakeLists.txt
01-basic/I-compiling-with-clang/: run_test.sh
01-basic/J-building-with-ninja/: run_test.sh
01-basic/K-imported-targets/: CMakeLists.txt  run_test.sh
04-static-analysis/clang-analyzer/: run_test.sh
04-static-analysis/clang-format/: run_test.sh
04-static-analysis/cppcheck/: run_test.sh
04-static-analysis/cppcheck-compile-commands/: run_test.sh
05-unit-testing/boost/: CMakeLists.txt
07-package-management/D-conan/i-basic/: run_test.sh
